fixed card title overflow

--- a/static/style.css
+++ b/static/style.css
@@ -51,25 +51,25 @@ hr {
     align-items: center;
     background-color: #121212;
     color: #fff;
-    margin: 0 auto; /* Center the card horizontally */
-    height: 70px; /* Adjust the height as needed */
+    margin: 0 auto; 
+    height: 70px; 
 }
 
 
 .playlist-artwork img{
-    width: 70px; /* Fixed width */
-    height: 70px; /* Fixed height */
+    width: 70px; 
+    height: 70px; 
     margin-right: 10px;
     display: flex;
-    justify-content: center; /* Center the image horizontally */
-    align-items: center; /* Center the image vertically */
-    overflow: hidden; /* Hide any overflow content */
+    justify-content: center; 
+    align-items: center; 
+    overflow: hidden; 
 }
 
 .playlist-artwork img.playlist-image {
     width: 100%;
     height: 100%;
-    object-fit: contain; /* Maintain aspect ratio and fit within the container */
+    object-fit: contain; 
 }
 
 .user-profile-card {
@@ -96,8 +96,12 @@ hr {
 
 }
 
-.card-body .card-title {
+.card card-title {
     font-size: 1.2rem;
+    white-space: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
 }
 
 .hover-card:hover {
@@ -114,7 +118,7 @@ hr {
 .playlist-hero {
         position: relative;
         overflow: hidden;
-        height: 450px; /* Adjust the height as needed */
+        height: 400px; 
     }
 
 .playlist-hero img {
